# C-TANIST_MACHINE

./: meson.build
src/: main.cpp
